# autosub

./: .gitignore  .gitlab-ci.yml  LINUX_RUN.sh  README.md  WINDOWS_RUN.bat  autosub_gui.py  config.py  pyproject.toml  transcribe_core.py
.github/workflows/: build.yml
