[project]
name = "autosub"
version = "0.1.0"
description = "Standalone transcription utility — drag-and-drop audio/video to subtitle files"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
]

[project.optional-dependencies]
windows = ["imageio-ffmpeg"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "pyinstaller>=6.21.0",
]
